WIP: making progress with analysis

--- a/forms/fwvagnt_fmb.xml
+++ b/forms/fwvagnt_fmb.xml
@@ -45,9 +45,125 @@
          <Item Name="FWBAGNT_CONTROL_AGENT2" Enabled="true" DistanceBetweenRecords="0" Width="140" MaximumLength="40" CompressionQuality="None" XPosition="185" YPosition="41" DatabaseItem="true" Bevel="Lowered" CanvasName="FZVAGNT_1_CANVAS" KeyboardNavigable="true" Height="14" Hint="Enter value for : FWBAGNT_CONTROL_AGENT2" ShowHorizontalScrollbar="false" ItemType="Text Item" DataType="Char" UpdateAllowed="true" DirtyInfo="true" VisualAttributeName="G$_NVA_TEXT_ITEM" Label="Control Agent 2" QueryAllowed="true" Visible="true" QueryLength="40" ShowVerticalScrollbar="false"/>
          <Item Name="FWBAGNT_CONTROL_AGENT3" Enabled="true" DistanceBetweenRecords="0" Width="140" MaximumLength="40" CompressionQuality="None" XPosition="326" YPosition="41" DatabaseItem="true" Bevel="Lowered" CanvasName="FZVAGNT_1_CANVAS" KeyboardNavigable="true" Height="14" Hint="Enter value for : FWBAGNT_CONTROL_AGENT3" ShowHorizontalScrollbar="false" ItemType="Text Item" DataType="Char" UpdateAllowed="true" DirtyInfo="true" VisualAttributeName="G$_NVA_TEXT_ITEM" Label="Control Agent 3" QueryAllowed="true" Visible="true" QueryLength="40" ShowVerticalScrollbar="false"/>
       </Block>
-      <Block Name="FORM_HEADER" RecordsBufferedCount="1" RecordsDisplayCount="1" RecordsFetchedCount="0" EnforcedColumnSecurity="false" InsertAllowed="true" EnforcedPrimaryKey="false" RecordOrientation="Vertical" UpdateAllowed="true" DeleteAllowed="true" DirtyInfo="true" VisualAttributeName="DEFAULT" KeyMode="Unique" DatabaseBlock="false" QueryDataSourceType="None" QueryAllowed="true" LockMode="Immediate" DMLDataType="None" NavigationStyle="Same Record" ShowScrollbar="false">
-         <Item Name="CURRENT_INSTITUTION" ValidateFromList="false" EditXPosition="0" LovXPosition="0" EditYPosition="0" Justification="Left" LovYPosition="0" Enabled="false" DistanceBetweenRecords="0" ListStyle="Poplist" Width="180" MaximumLength="30" FixedLength="false" WrapStyle="None" AutoSkip="false" CompressionQuality="None" XPosition="144" Required="false" YPosition="0" DatabaseItem="false" Bevel="Lowered" AutoHint="false" MouseNavigate="true" MultiLine="false" CaseInsensitiveQuery="false" KeyboardNavigable="false" CaseRestriction="Mixed" CheckBoxOtherValues="Not Allowed" Height="17" ConcealData="false" SizingStyle="Crop" ShowHorizontalScrollbar="false" Iconic="false" InsertAllowed="true" ItemType="Text Item" DataType="Char" UpdateAllowed="false" UpdateIfNull="false" PrimaryKey="false" KeepCursorPosition="false" VisualAttributeName="DEFAULT" DefaultButton="false" QueryAllowed="false" Visible="true" QueryLength="30" LockRecord="false" DisplayQuality="High" ShowVerticalScrollbar="false"/>
-         <Item Name="CURRENT_DATE" ValidateFromList="false" EditXPosition="0" LovXPosition="0" EditYPosition="0" Justification="Left" LovYPosition="0" Enabled="false" DistanceBetweenRecords="0" ListStyle="Poplist" Width="66" MaximumLength="11" FixedLength="false" WrapStyle="None" AutoSkip="false" CompressionQuality="None" XPosition="342" Required="false" YPosition="0" DatabaseItem="false" Bevel="Lowered" AutoHint="false" MouseNavigate="true" MultiLine="false" CaseInsensitiveQuery="false" KeyboardNavigable="false" CaseRestriction="Mixed" CheckBoxOtherValues="Not Allowed" Height="17" ConcealData="false" SizingStyle="Crop" ShowHorizontalScrollbar="false" Iconic="false" InsertAllowed="true" ItemType="Text Item" DataType="Char" UpdateAllowed="false" UpdateIfNull="false" PrimaryKey="false" KeepCursorPosition="false" VisualAttributeName="DEFAULT" DefaultButton="false" QueryAllowed="false" Visible="true" QueryLength="11" LockRecord="false" DisplayQuality="High" ShowVerticalScrollbar="false"/>
+      <Block
+        Name="FORM_HEADER"
+        RecordsBufferedCount="1"
+        RecordsDisplayCount="1"
+        RecordsFetchedCount="0"
+        EnforcedColumnSecurity="false"
+        InsertAllowed="true"
+        EnforcedPrimaryKey="false"
+        RecordOrientation="Vertical"
+        UpdateAllowed="true"
+        DeleteAllowed="true"
+        DirtyInfo="true"
+        VisualAttributeName="DEFAULT"
+        KeyMode="Unique"
+        DatabaseBlock="false"
+        QueryDataSourceType="None"
+        QueryAllowed="true"
+        LockMode="Immediate"
+        DMLDataType="None"
+        NavigationStyle="Same Record"
+        ShowScrollbar="false">
+        <Item
+          Name="CURRENT_INSTITUTION"
+          ValidateFromList="false"
+          EditXPosition="0"
+          LovXPosition="0"
+          EditYPosition="0"
+          Justification="Left"
+          LovYPosition="0"
+          Enabled="false"
+          DistanceBetweenRecords="0"
+          ListStyle="Poplist"
+          Width="180"
+          MaximumLength="30"
+          FixedLength="false"
+          WrapStyle="None"
+          AutoSkip="false"
+          CompressionQuality="None"
+          XPosition="144"
+          Required="false"
+          YPosition="0"
+          DatabaseItem="false"
+          Bevel="Lowered"
+          AutoHint="false"
+          MouseNavigate="true"
+          MultiLine="false"
+          CaseInsensitiveQuery="false"
+          KeyboardNavigable="false"
+          CaseRestriction="Mixed"
+          CheckBoxOtherValues="Not Allowed"
+          Height="17"
+          ConcealData="false"
+          SizingStyle="Crop"
+          ShowHorizontalScrollbar="false"
+          Iconic="false"
+          InsertAllowed="true"
+          ItemType="Text Item"
+          DataType="Char"
+          UpdateAllowed="false"
+          UpdateIfNull="false"
+          PrimaryKey="false"
+          KeepCursorPosition="false"
+          VisualAttributeName="DEFAULT"
+          DefaultButton="false"
+          QueryAllowed="false"
+          Visible="true"
+          QueryLength="30"
+          LockRecord="false"
+          DisplayQuality="High"
+          ShowVerticalScrollbar="false"/>
+         <Item
+           Name="CURRENT_DATE"
+           ValidateFromList="false"
+           EditXPosition="0"
+           LovXPosition="0"
+           EditYPosition="0"
+           Justification="Left"
+           LovYPosition="0"
+           Enabled="false"
+           DistanceBetweenRecords="0"
+           ListStyle="Poplist"
+           Width="66"
+           MaximumLength="11"
+           FixedLength="false"
+           WrapStyle="None"
+           AutoSkip="false"
+           CompressionQuality="None"
+           XPosition="342"
+           Required="false"
+           YPosition="0"
+           DatabaseItem="false"
+           Bevel="Lowered"
+           AutoHint="false"
+           MouseNavigate="true"
+           MultiLine="false"
+           CaseInsensitiveQuery="false"
+           KeyboardNavigable="false"
+           CaseRestriction="Mixed"
+           CheckBoxOtherValues="Not Allowed"
+           Height="17"
+           ConcealData="false"
+           SizingStyle="Crop"
+           ShowHorizontalScrollbar="false"
+           Iconic="false"
+           InsertAllowed="true"
+           ItemType="Text Item"
+           DataType="Char"
+           UpdateAllowed="false"
+           UpdateIfNull="false"
+           PrimaryKey="false"
+           KeepCursorPosition="false"
+           VisualAttributeName="DEFAULT"
+           DefaultButton="false"
+           QueryAllowed="false"
+           Visible="true"
+           QueryLength="11"
+           LockRecord="false"
+           DisplayQuality="High"
+           ShowVerticalScrollbar="false"/>
          <Item Name="CURRENT_TIME" ValidateFromList="false" EditXPosition="0" LovXPosition="0" EditYPosition="0" Justification="Left" LovYPosition="0" Enabled="false" DistanceBetweenRecords="0" ListStyle="Poplist" Width="48" MaximumLength="8" FixedLength="false" WrapStyle="None" AutoSkip="false" CompressionQuality="None" XPosition="420" Required="false" YPosition="0" DatabaseItem="false" Bevel="Lowered" AutoHint="false" MouseNavigate="true" MultiLine="false" CaseInsensitiveQuery="false" KeyboardNavigable="false" CaseRestriction="Mixed" CheckBoxOtherValues="Not Allowed" Height="17" ConcealData="false" SizingStyle="Crop" ShowHorizontalScrollbar="false" Iconic="false" InsertAllowed="true" ItemType="Text Item" DataType="Char" UpdateAllowed="false" UpdateIfNull="false" PrimaryKey="false" KeepCursorPosition="false" VisualAttributeName="DEFAULT" DefaultButton="false" QueryAllowed="false" Visible="true" QueryLength="8" LockRecord="false" DisplayQuality="High" ShowVerticalScrollbar="false"/>
          <Item Name="CURRENT_FORM" ValidateFromList="false" EditXPosition="0" LovXPosition="0" EditYPosition="0" Justification="Left" LovYPosition="0" Enabled="true" DistanceBetweenRecords="0" ListStyle="Poplist" Width="42" MaximumLength="7" FixedLength="false" WrapStyle="None" AutoSkip="false" CompressionQuality="None" XPosition="6" Required="false" YPosition="0" DatabaseItem="false" Bevel="Lowered" AutoHint="false" MouseNavigate="true" MultiLine="false" CaseInsensitiveQuery="false" KeyboardNavigable="true" CaseRestriction="Mixed" CheckBoxOtherValues="Not Allowed" Height="17" ConcealData="false" SizingStyle="Crop" ShowHorizontalScrollbar="false" Iconic="false" InsertAllowed="true" ItemType="Text Item" DataType="Char" UpdateAllowed="false" UpdateIfNull="false" PrimaryKey="false" KeepCursorPosition="false" VisualAttributeName="DEFAULT" DefaultButton="false" QueryAllowed="false" Visible="true" QueryLength="7" LockRecord="false" DisplayQuality="High" ShowVerticalScrollbar="false"/>
          <Item Name="CURRENT_RELEASE" ValidateFromList="false" LovXPosition="0" Justification="Left" LovYPosition="0" ListStyle="Poplist" Width="60" MaximumLength="10" WrapStyle="None" AutoSkip="false" CompressionQuality="None" XPosition="60" YPosition="0" DatabaseItem="false" Bevel="Lowered" AutoHint="false" MouseNavigate="true" MultiLine="false" CaseInsensitiveQuery="false" KeyboardNavigable="false" CaseRestriction="Mixed" CheckBoxOtherValues="Not Allowed" Comment="AUDIT TRAIL: 2.1&amp;#10;1. Forms 4.0 conversion.                                     JF 05/23/94&amp;#10;AUDIT TRAIL: 2.1.1&amp;#10;1. VGA corrections.                                          JF 03/17/95&amp;#10;2. Corrected form title.                                     JF 03/27/95&amp;#10;3. MAC/CHARACTER-UPDATE                                      ET 04/26/95&amp;#10;AUDIT TRAIL: 2.1.5&amp;#10;1. Role Security                                             TK 08/16/95&amp;#10;2. Default dates using $$DATE$$ (also $$DATETIME$$)          TK 10/19/95&amp;#10;   use operating system date (easily changed by user on&amp;#10;   client device).  Changed default date value from $$DATE$$&amp;#10;   to $$DBDATE$$ for item TTVPAYT_ACTIVITY_DATE.&amp;#10;3. Forms 4.5 conversion.                                     JF 04/24/96&amp;#10;AUDIT TRAIL END" PrimaryKey="false" DefaultButton="false" QueryAllowed="false" Visible="true" QueryLength="10" DisplayQuality="High" EditXPosition="0" EditYPosition="0" Enabled="false" DistanceBetweenRecords="0" FixedLength="false" Required="false" Height="17" ConcealData="false" SizingStyle="Crop" ShowHorizontalScrollbar="false" Iconic="false" InsertAllowed="true" ItemType="Text Item" DataType="Char" UpdateAllowed="false" UpdateIfNull="false" KeepCursorPosition="false" VisualAttributeName="DEFAULT" LockRecord="false" ShowVerticalScrollbar="false"/>
@@ -217,8 +333,7 @@
          <ObjectGroupChild Name="G$_NVA_DATA_SEPARATOR_LINE" SubclassSubObject="true"/>
       </ObjectGroup>
       <ObjectGroup Name="G$_VALIDATION_FORM" ParentModule="GOQOLIB" ParentModuleType="12" ParentName="G$_VALIDATION_FORM" ParentFilename="GOQOLIB" ParentType="23">
-         <ObjectGroupChild Name="G$_DEFAULT_PM" SubclassSubObject="true"/>
-         <ObjectGroupChild Name="G$_CAUTION_ALERT" SubclassSubObject="true"/>
+         <ObjectGroupChild Name="G$_DEFAULT_PM" SubclassSubObject="true"/> <ObjectGroupChild Name="G$_CAUTION_ALERT" SubclassSubObject="true"/>
          <ObjectGroupChild Name="G$_CAUTION_OK_ALERT" SubclassSubObject="true"/>
          <ObjectGroupChild Name="G$_INFO_ALERT" SubclassSubObject="true"/>
          <ObjectGroupChild Name="G$_WARNING_ALERT" SubclassSubObject="true"/>
